load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "bazel_skylib",
    urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz"],
    sha256 = "f7be3474d42aae265405a592bb7da8e171919d74c16f082a5457840f06054728",
)

git_repository(
    name = "com_google_googletest",
    remote = "https://github.com/google/googletest.git",
    tag = "v1.13.0",
)

git_repository(
    name = "com_github_gflags_gflags",
    remote = "https://github.com/gflags/gflags.git",
    tag = "v2.2.2",
)

git_repository(
    name = "com_google_benchmark",
    remote = "https://github.com/google/benchmark.git",
    tag = "v1.7.1",
)

git_repository(
    name = "yhirose_cpp_httplib",
    remote = "https://github.com/yhirose/cpp-httplib.git",
    tag = "v0.12.2",
    build_file = "//bazel/third_party:yhirose_cpp_httplib.BUILD",
)

git_repository(
    name = "nlohmann_json",
    remote = "https://github.com/nlohmann/json.git",
    commit = "6af826d0bdb55e4b69e3ad817576745335f243ca",
    shallow_since = "2023-03-01",
)

git_repository(
    name = "gabime_spdlog",
    remote = "https://github.com/gabime/spdlog.git",
    tag = "v1.11.0",
    build_file = "//bazel/third_party:gabime_spdlog.BUILD",
)

git_repository(
    name = "abseil-cpp",
    remote = "https://github.com/abseil/abseil-cpp.git",
    tag = "20230125.2",
)

http_archive(
    name = "com_github_google_glog",
    sha256 = "122fb6b712808ef43fbf80f75c52a21c9760683dae470154f02bddfc61135022",
    strip_prefix = "glog-0.6.0",
    urls = ["https://github.com/google/glog/archive/v0.6.0.zip"],
)
