[cc_binary(
    name = cc_name.split('.')[0],
    srcs = [cc_name],
    deps = ["//liph"],
) for cc_name in glob(
    include = ["*.cpp"],
    exclude = [
        "main.cpp",
        "glog-vs-spdlog.cpp",
    ],
)]

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        "//liph",
        "@abseil-cpp//absl/strings",
        "@com_github_google_glog//:glog",
        "@gabime_spdlog//:spdlog",
    ],
)

cc_binary(
    name = "glog-vs-spdlog",
    srcs = ["glog-vs-spdlog.cpp"],
    deps = [
        "//liph",
        "@com_github_google_glog//:glog",
        "@gabime_spdlog//:spdlog",
    ],
)
