cc_library(
    name = "liph",
    srcs = glob(
        include = ["**/*.cpp",],
        exclude = [
            "**/*_test.cpp",
            "**/*_benchmark.cpp",
        ],
    ),
    hdrs = glob(["**/*.h"]),
    deps = [
        "@thirdparty//sqlite-3.43.1:libsqlite3",
        "@thirdparty//fmt-10.1.1:fmt",
        # "@thirdparty//cryptopp-8.8.0:cryptopp",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = test_name.split('.')[0],
    srcs = [test_name],
    deps = [
        ":liph",
        "@thirdparty//googletest-1.14.0:gtest_main",
    ],
) for test_name in glob(["**/*_test.cpp"])]

cc_test(
    name = "test",
    srcs = glob(
        include = ["**/*_test.cpp"],
    ),
    deps = [
        ":liph",
        "@thirdparty//googletest-1.14.0:gtest_main",
    ],
)

[cc_binary(
    name = cc_name.split('.')[0],
    srcs = [cc_name],
    deps = [
        ":liph",
        "@thirdparty//benchmark-1.8.3:benchmark_main",
    ],
) for cc_name in glob(["**/*_benchmark.cpp"])]
