[cc_binary(
    name = cc_name.split('.')[0],
    srcs = [cc_name],
    deps = [
        "//liph",
        "@com_github_gflags_gflags//:gflags",
        "@nlohmann_json//:json",
    ],
) for cc_name in glob(
    include = ["*.cpp"],
    exclude = [
        "record-server.cpp",
        "animal-crossing-server.cpp",
    ],
)]

cc_binary(
    name = "record-server",
    srcs = ["record-server.cpp"],
    deps = [
        "//liph",
        "@com_github_gflags_gflags//:gflags",
        "@yhirose_cpp_httplib//:httplib",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "animal-crossing-server",
    srcs = ["animal-crossing-server.cpp"],
    deps = [
        "//liph",
        "@com_github_gflags_gflags//:gflags",
        "@yhirose_cpp_httplib//:httplib",
        "@nlohmann_json//:json",
        "@gabime_spdlog//:spdlog",
    ],
)
