[cc_binary(
    name = cc_name.split('.')[0],
    srcs = [cc_name],
    deps = [
        "//liph",
        "@com_github_gflags_gflags//:gflags",
    ],
) for cc_name in glob(
    include = ["*.cpp"],
    exclude = [
        "record-server.cpp",
        "animal-crossing-server.cpp",
    ],
)]

cc_binary(
    name = "record-server",
    srcs = ["record-server.cpp"],
    deps = [
        "//liph",
        "//thirdparty/httplib-0.14.0:httplib",
    ],
)

cc_binary(
    name = "animal-crossing-server",
    srcs = ["animal-crossing-server.cpp"],
    deps = [
        "//liph",
        "//thirdparty/httplib-0.14.0:httplib",
    ],
)
